tests/correctness/resources/miniboxing/tests/compile/SI-4012-2.check
newSource1.scala:6: error: Using named super is not supported in miniboxed classes. For a workaround, please see https://github.com/miniboxing/miniboxing-plugin/issues/166:
  super[Super].superb // okay
               ^
newSource1.scala:7: warning: Although the type parameter A of class Super is specialized, miniboxing and specialization communicate among themselves by boxing (thus, inefficiently) on all classes other than as FunctionX and TupleX. If you want to maximize performance, consider switching from specialization to miniboxing: '@miniboxed T':
  super.superb        // okay
        ^
newSource1.scala:8: warning: Although the type parameter A of class Super is specialized, miniboxing and specialization communicate among themselves by boxing (thus, inefficiently) on all classes other than as FunctionX and TupleX. If you want to maximize performance, consider switching from specialization to miniboxing: '@miniboxed T':
  override def superb: Int = super.superb // okay
                                   ^
